force-app/main/default/objects/IndustryMaster__c/IndustryMaster__c.object-meta.xml
<CustomObject>
    <label>Industry Master</label>
    <nameField>
        <displayFormat>IM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>