force-app/main/default/objects/IndustryMaster__c/fields/APday__c.field-meta.xml
<CustomField>
    <fullName>APday__c</fullName>
    <label>AP day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>