force-app/main/default/objects/IndustryMaster__c/fields/ARday__c.field-meta.xml
<CustomField>
    <fullName>ARday__c</fullName>
    <label>AR day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>