force-app/main/default/objects/IndustryMaster__c/fields/BusinessGroupCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessGroupCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Group Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>