force-app/main/default/objects/IndustryMaster__c/fields/BusinessGroupNameEN__c.field-meta.xml
<CustomField>
    <fullName>BusinessGroupNameEN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Group Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>