force-app/main/default/objects/IndustryMaster__c/fields/BusinessGroupNameTH__c.field-meta.xml
<CustomField>
    <fullName>BusinessGroupNameTH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Group Name TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>