force-app/main/default/objects/IndustryMaster__c/fields/COGday__c.field-meta.xml
<CustomField>
    <fullName>COGday__c</fullName>
    <label>COG day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>