force-app/main/default/objects/IndustryMaster__c/fields/ColorCode__c.field-meta.xml
<CustomField>
    <fullName>ColorCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Color Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>