force-app/main/default/objects/IndustryMaster__c/fields/Diversification__c.field-meta.xml
<CustomField>
    <fullName>Diversification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diversification</label>
    <type>Checkbox</type>
</CustomField>