force-app/main/default/objects/IndustryMaster__c/fields/HighlySelectiveIndustry__c.field-meta.xml
<CustomField>
    <fullName>HighlySelectiveIndustry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Highly Selective Industry</label>
    <type>Checkbox</type>
</CustomField>