force-app/main/default/objects/IndustryMaster__c/fields/HighRisk__c.field-meta.xml
<CustomField>
    <fullName>HighRisk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Risk</label>
    <type>Checkbox</type>
</CustomField>