force-app/main/default/objects/IndustryMaster__c/fields/IncomeFactor__c.field-meta.xml
<CustomField>
    <fullName>IncomeFactor__c</fullName>
    <label>Income Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>