force-app/main/default/objects/IndustryMaster__c/fields/INVday__c.field-meta.xml
<CustomField>
    <fullName>INVday__c</fullName>
    <label>INV day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>