force-app/main/default/objects/IndustryMaster__c/fields/ISICCode__c.field-meta.xml
<CustomField>
    <fullName>ISICCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ISIC Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>