force-app/main/default/objects/IndustryMaster__c/fields/Negative__c.field-meta.xml
<CustomField>
    <fullName>Negative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negative</label>
    <type>Checkbox</type>
</CustomField>