force-app/main/default/objects/IndustryMaster__c/fields/SubIndustry__c.field-meta.xml
<CustomField>
    <fullName>SubIndustry__c</fullName>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Product Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>