force-app/main/default/objects/IndustryMaster__c/fields/Suspend__c.field-meta.xml
<CustomField>
    <fullName>Suspend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend</label>
    <type>Checkbox</type>
</CustomField>