force-app/main/default/objects/IndustryMaster__c/fields/Team_Code_CB__c.field-meta.xml
<CustomField>
    <fullName>Team_Code_CB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Code (CB)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>