force-app/main/default/objects/IndustryMaster__c/fields/TMBCode__c.field-meta.xml
<CustomField>
    <fullName>TMBCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>