force-app/main/default/objects/IndustryMaster__c/fields/Zone_Code_BB__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code_BB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone Code (BB)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>